force-app/main/default/objects/sf_devops__Work_Item__c/fields/Begin_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Begin_In_Progress__c</fullName>
    <description>The DateTime this work item last transitioned into In Progress</description>
    <label>Begin In Progress</label>
    <type>DateTime</type>
</CustomField>