force-app/main/default/objects/sf_devops__Work_Item__c/fields/Begin_In_Review__c.field-meta.xml
<CustomField>
    <fullName>Begin_In_Review__c</fullName>
    <description>The DateTime this work item last transitioned to In Review</description>
    <label>Begin In Review</label>
    <type>DateTime</type>
</CustomField>