force-app/main/default/objects/sf_devops__Work_Item__c/fields/Post_Promote_Task__c.field-meta.xml
<CustomField>
    <fullName>Post_Promote_Task__c</fullName>
    <description>A reminder of a task to complete after this work item has been promoted</description>
    <label>Post Promote Task</label>
    <length>255</length>
    <type>Text</type>
</CustomField>