force-app/main/default/objects/sf_devops__Work_Item__c/fields/Pre_Promote_Task__c.field-meta.xml
<CustomField>
    <fullName>Pre_Promote_Task__c</fullName>
    <description>A reminder of something to do before this work item is promoted</description>
    <label>Pre Promote Task</label>
    <length>255</length>
    <type>Text</type>
</CustomField>