force-app/main/default/objects/sf_devops__Work_Item__c/fields/Total_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Total_In_Progress__c</fullName>
    <description>The number of minutes this WI spent In Progress</description>
    <label>Total In Progress</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>