force-app/main/default/objects/sf_devops__Work_Item__c/fields/Total_In_Review__c.field-meta.xml
<CustomField>
    <fullName>Total_In_Review__c</fullName>
    <description>Total minutes this work item spent in review</description>
    <label>Total In Review</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>