force-app/main/default/objects/sf_devops__Work_Item__c/listViews/Promote_Tasks.listView-meta.xml
<ListView>
    <fullName>Promote_Tasks</fullName>
    <columns>NAME</columns>
    <columns>sf_devops__Subject__c</columns>
    <columns>Pre_Promote_Task__c</columns>
    <columns>Post_Promote_Task__c</columns>
    <filterScope>Everything</filterScope>
    <label>Promote Tasks</label>
</ListView>