force-app/main/default/objects/sf_devops__Work_Item__c/listViews/sf_devops__all.listView-meta.xml
<ListView>
    <fullName>sf_devops__all</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>sf_devops__Subject__c</columns>
    <columns>sf_devops__State__c</columns>
    <columns>Begin_In_Progress__c</columns>
    <columns>Total_In_Progress__c</columns>
    <columns>Begin_In_Review__c</columns>
    <columns>Total_In_Review__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>