force-app/main/default/objects/sf_devops__Work_Item__c/listViews/Test_Status.listView-meta.xml
<ListView>
    <fullName>Test_Status</fullName>
    <columns>NAME</columns>
    <columns>sf_devops__Subject__c</columns>
    <columns>Begin_In_Progress__c</columns>
    <columns>Begin_In_Review__c</columns>
    <columns>Total_In_Progress__c</columns>
    <columns>Total_In_Review__c</columns>
    <filterScope>Everything</filterScope>
    <label>Test Status</label>
</ListView>